--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,8 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+import 'sweetalert2/src/sweetalert2.scss'
+
 html,
 body {
   padding: 0;
